<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">语音输入板</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="info1">点击麦克风,你说我记~</string>
	<string name="info2">你说我记~</string>
	<string name="content_description">底部功能</string>
	<string name="clear_all">重新开始</string>
	<string name="copy">复制</string>
	<string name="setting">设 置</string>
	<string name="bind">去绑定</string>
	<string name="bind_setting_title">账号绑定</string>
	<string name="unbind">解除绑定</string>
	<string name="about_us">关于我们</string>
	<string name="feedback">意见反馈</string>
	<string name="feedback_content">反馈意见</string>
	<string name="feedback_input_mail">您的邮箱</string>
	<string name="recommand_app">应用推荐</string>
	<string name="hint">语音转换文字内容</string>
	<string name="company">思必驰出品</string>
	<string name="from">思必驰--中国领先的语音技术提供商</string>
	<string name="confirm">确 定</string>
	<string name="send">发  送</string>
	<string name="cancle">取 消</string>
	<string name="yinxiang">印象笔记</string>
	<string name="youdao">有道云笔记</string>
	<string name="sina">新浪微博</string>
	<string name="recommand">应用推荐</string>
	
	<string name="unbind_confirm">确实解除绑定？</string>
	
    <!-- TapeActivity 里地提示语 -->
    <!-- 无网络提示 -->
    <string name="network_error">网络不太好哦\n没网络不能干活了…</string>
    <!-- 识别结束后的提醒 -->
    <string name="record_success">您的话我都记下了~</string>
    <!-- 识别结束后的提醒 -->
    <string name="record_success_share">您的话我都记下了~\n快去分享吧</string>
    <!-- 识别结束后的提醒 -->
    <string name="record_fail">网络不太好哦\n没网络不能干活了…</string>
    <!-- 文本为空时点击分享按钮 -->
    <string name="text_empty">先说点什么\n才能分享哦</string>
    <string name="copy_text_empty">先说点什么\n才能拷贝哦</string>
    <string name="copy_success">复制成功\n♪d(´▽｀)b♪</string>
    <string name="mail_success">邮件发送成功咯~</string>
    <string name="mail_cancel">您已取消发送邮件</string>
    <string name="mail_saved">内容存进邮箱草稿箱里咯~</string>
    <string name="mail_fail">邮件发送失败</string>
    <string name="sms_cancel">您已取消发送短信</string>
    <string name="sms_success">短信发送成功咯~</string>
    <string name="sms_fail">短信发送失败</string>
    <string name="evernote_oauth_fail">啊，授权失败了…</string>
    <string name="evernote_makenote_fail">啊，创建笔记失败…</string>
    <string name="evernote_upload_limit">您印象笔记的流量不够了，存不下了</string>
    <string name="evernote_makenote_success">笔记创建成功！</string>
    <string name="evernote_makingnote">保存中…</string>
    <string name="image_add_none">啊，没有找到图片\n文件不存在</string>
    <string name="mail_chek_multi">语音输入板当前分享邮件仅支持首张图片，是否继续？</string>
    <string name="msg_chek_multi">语音输入板当前分享短信仅支持首张图片，是否继续？</string>

    <!-- evernote -->
    <string name="err_creating_note">Error creating new Evernote note</string>
    <string name="msg_image_saved">Image saved to Evernote</string>
    <string name="label_app_title">Evernote EDAM Android Demo</string>
    <string name="label_select_button">Select Image</string>
    <string name="label_message">No image selected</string>
    <string name="label_save_button">Save</string>
    <string name="err_image_selected">Select Image</string>
    <string name="err_retrieving_resource">Error retrieving resource</string>
    <string name="msg_retrieved_resource">Retrieved resource from server</string>
    <string name="esdk__pick_notebook">Pick a notebook</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Sign out</string>
    <string name="label_search">Search</string>
    <string name="esdk__image_picker">Image Picker</string>
    <string name="esdk__simple_note">Simple Note</string>
    <string name="esdk__search_notes">Search notes</string>
    <string name="label_select_notebook_button">Select Notebook</string>
    <string name="title">Note Title</string>
    <string name="content">Note Content</string>
    <string name="empty_content_error">Note title and content cannot be empty</string>
    <string name="note_saved">Note saved to Evernote</string>
    <string name="notes_searched">Searching notes has finished</string>
    <string name="ok">Ok</string>
    <string name="simple_note">Simplenote</string>
    <string name="image_picker">Image Picker</string>
    <string name="search_notes">Search Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="error_listing_notebooks">Error listing notebooks</string>
    <string name="error_creating_notestore">啊，创建笔记失败…</string>
    <string name="error_saving_note">Error saving note</string>
    <string name="error_listing_notes">Error listing note</string>
    <string name="esdk__evernote">Evernote</string>
    <string name="esdk__evernote_login_failed">印象笔记登录失败</string>
    <string name="esdk__evernote_login_successful">印象笔记登录成功</string>
    <string name="esdk__err_protocol_version">Incomatible EDAM client protocol version</string>
    <string name="esdk__err_authentication">Error authenticating to Evernote</string>
    <string name="esdk__err_api_setup">Error intializing Evernote API</string>
    <string name="esdk__loading">正在加载...</string>
    
    <string name="share_loading">正在努力为您生成图片，请稍候...</string>
    <string name="share_to_sina_loading">正在分享，请稍候...</string>
    <string name="feedback_empty_content">请写下给我们的留言^_^</string>
    <string name="feedback_empty_email">请留下邮箱^_^</string>
    <string name="feedback_fail">留言未能发送\n再试一次？</string>
    <string name="feedback_success">反馈已收到\n感谢支持^_^</string>
    <string name="feedback_send">发送中...</string>
    
    <string name="evernote_capacity_full">您印象笔记的流量不够了，存不下了</string>
    
    <string name="weibo_space">新浪微博\n不让发空格回车</string>
    <string name="weibo_share_fail">没能分享到微博\n再试一次~</string>
    <string name="weibo_share_same">不能发布相同的微博</string>
    <string name="weibo_share_success">分享微博成功</string>
    <string name="weibo_logout_success">解除微博的绑定了…</string>
    <string name="youdao_uninstalled">尚未安装有道笔记！</string>
    <string name="weibo_share_fail_140">微博只能说140字，你多说了%d个字…</string>
    <string name="weibo_token_exprie">微博口令超时，请重新注册...</string>
    <string name="oauth_fail">啊，授权失败了…</string>
    
</resources>
