<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="238dip"
    android:background="@drawable/tankuang_bg"
    android:orientation="vertical"
    android:paddingTop="@dimen/dau_padding_top_bottom"
    android:paddingBottom="@dimen/dau_padding_top_bottom"
    android:paddingLeft="@dimen/dau_padding_left_right"
    android:paddingRight="@dimen/dau_padding_left_right"
    android:gravity="center"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/dau_title_textsize"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="@dimen/dau_info_textsize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/from" />

    <Button
        android:id="@+id/bt_back_about_us"
        android:layout_width="@dimen/dau_bt_back_width"
        android:layout_height="@dimen/dau_bt_back_height"
        android:background="@drawable/button_"
        android:textSize="@dimen/dau_bt_back_textsize"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:textColor="@android:color/white"
        android:text="@string/confirm" />

</LinearLayout>
