<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:background="@drawable/tankuang_bg"

    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tv_confirm_title"
            android:layout_width="@dimen/evernote_confirm_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/confirm_text_color"
            android:paddingLeft="3dip"
            android:lineSpacingExtra="5dip"
            android:text="@string/unbind_confirm"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/evernote_confirm_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_evernote_confirm"
            android:layout_width="0dip"
            android:layout_height="@dimen/dau_bt_back_height"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/button_"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dau_bt_back_textsize" />

        <Button
            android:id="@+id/bt_evernote_cancle"
            android:layout_width="0dip"
            android:layout_height="@dimen/dau_bt_back_height"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/button_"
            android:text="@string/cancle"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dau_bt_back_textsize" />
    </LinearLayout>

</LinearLayout>