<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_setting_header_aboutus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
         android:background="@color/header_bg" >

        <ImageView
            android:id="@+id/iv_about_us_back"
            android:layout_width="@dimen/settings_header_iv_setting_back_width"
            android:layout_height="@dimen/settings_header_iv_setting_back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/setting_backward_" />

        <LinearLayout
            android:id="@+id/ll_header_about_us"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:src="@drawable/setting_backward" >
        </LinearLayout>

        <TextView
            android:id="@+id/tv_header_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about_us"
            android:textColor="@color/title"
            android:textSize="@dimen/settings_header_tv_header_textsize" />
    </RelativeLayout>
        	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/divider_height"
	    android:background="@color/devider"
	    />
    <RelativeLayout
        android:id="@+id/rl_mainbody_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="#ebebeb"
        >

        <ImageView
            android:id="@+id/iv_logo_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dip"
            android:src="@drawable/icon_aboutus" />

        <TextView
            android:id="@+id/tv_about_us_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo_about_us"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dip"
            android:text="@string/app_name"
            android:textColor="@color/about_us_appname"
            android:textSize="@dimen/dau_logo_textsize" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_us_appname"
            android:layout_centerHorizontal="true"
            android:text="v 1.5"
            android:textColor="@color/about_us_version"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/company"
            android:layout_above="@+id/com_info"
            android:textSize="@dimen/dau_info_textsize" />

         <TextView
            android:id="@id/com_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:layout_centerHorizontal="true"
            android:text="@string/from"
            android:textSize="@dimen/dau_info_textsize" /> 
    </RelativeLayout>

</LinearLayout>