<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_setting_header_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
         android:background="@color/header_bg" >

        <ImageView
            android:id="@+id/iv_feedback"
            android:layout_width="@dimen/settings_header_iv_setting_back_width"
            android:layout_height="@dimen/settings_header_iv_setting_back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/setting_backward_" />

        <LinearLayout
            android:id="@+id/ll_header_feedback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:src="@drawable/setting_backward" >
        </LinearLayout>

        <TextView
            android:id="@+id/tv_header_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            android:textColor="@color/title"
            android:textSize="@dimen/settings_header_tv_header_textsize" />
    </RelativeLayout>
        	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/divider_height"
	    android:background="@color/devider"
	    />
    <RelativeLayout
        android:id="@+id/rl_mainbody_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:paddingTop="8dip" >

        <LinearLayout
            android:id="@+id/ll_feedback_mail"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/yijianfankui" >

            <EditText
                android:id="@+id/et_feedback_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:background="@null"
                android:hint="@string/feedback_input_mail"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/grey" >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/et_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:padding="5dip"
            android:layout_below="@id/ll_feedback_mail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dip"
            android:background="@drawable/yijianfankui"
            android:gravity="top"
            android:hint="@string/feedback"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/bt_feed_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dau_bt_back_height"
            android:layout_below="@id/et_feedback_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_feedback"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dau_bt_back_textsize" />

    </RelativeLayout>


</LinearLayout>